--- a/.github/workflows/key4hep-build.yaml
+++ b/.github/workflows/key4hep-build.yaml
@@ -13,6 +13,9 @@ jobs:
       matrix:
         build_type: ["release", "nightly"]
         image: ["alma9", "ubuntu22", "centos7"]
+        exclude:
+          - build_type: "nightly"
+            image: "centos7"
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
