--- a/RecCalorimeter/CMakeLists.txt
+++ b/RecCalorimeter/CMakeLists.txt
@@ -38,12 +38,13 @@ add_test(NAME FCC_createJets
   COMMAND k4run RecCalorimeter/tests/options/runJetReco.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
+set_test_env(FCC_createJets)
 
 add_test(NAME FCC_createTruthJets
   COMMAND k4run RecCalorimeter/tests/options/runTruthJetReco.py
          WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
-
+set_test_env(FCC_createTruthJets)
 
 #install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/tests/options DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Reconstruction/RecCalorimeter)
 #
