--- a/RecCaloCommon/CMakeLists.txt
+++ b/RecCaloCommon/CMakeLists.txt
@@ -14,6 +14,9 @@ gaudi_add_library(RecCaloCommon
                        ${FASTJET_LIBRARIES}
 )
 
+message(STATUS "FastJet include directories:\n${FASTJET_INCLUDE_DIRS}")
+message(STATUS "FastJet libraries:\n${FASTJET_LIBRARIES}")
+
 target_include_directories(RecCaloCommon PUBLIC ${FASTJET_INCLUDE_DIRS})
 target_link_directories(RecCaloCommon PUBLIC ${FASTJET_LIBRARIES})
 
