--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,20 @@ find_package(k4FWCore) # implicit: Gaudi
 find_package(EDM4HEP) # implicit: Podio
 find_package(DD4hep)
 find_package(k4geo)
-find_package(ONNXRuntime)
 find_package(FastJet)
 # New versions of ONNRuntime package provide onnxruntime-Config.cmake
 # and use the name onnxruntime
 find_package(onnxruntime)
+if (NOT onnxruntime_FOUND)
+  message(STATUS "Could not find onnxruntime (> 1.17.1). Looking for an older version")
+  find_package(ONNXRuntime)
+endif()
+
+if(onnxruntime_FOUND OR ONNXRuntime_FOUND)
+else()
+  message(FATAL_ERROR "Failed to locate ONNXRuntime!")
+endif()
+
 #---------------------------------------------------------------
 
 
